cabal-version:      2.4
name:               bson-codec
version:            0
license-file:       LICENSE
copyright:          2024 Rob Nichols
author:             Rob Nichols
maintainer:         Rob Nichols <rob@robnet.com>
synopsis:           Reusable
extra-source-files: LICENSE

common common-options
  default-language:   Haskell2010
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -Wcompat
    -Widentities -Wredundant-constraints -Wpartial-fields
    -fhide-source-paths -Wwarn=deprecations -threaded

  --  -Werror
  --  -O2
  --  -fno-warn-unused-top-binds
  --  -fno-warn-unused-imports
  --  -fno-warn-unused-local-binds
  --  -fno-warn-unused-matches
  --  -fno-warn-redundant-constraints
  --  -rtsopts
  --  -with-rtsopts=-N

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , base          >=4.13.0.0 && <4.19.0.0.0
    , lens
    , mtl
    , profunctors

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Data.Bson.Codec
  other-modules:   Data.Bson.Codec.Core Data.Bson.Codec.FixEither
  build-depends:
    , bson
    , either
    , profunctors
    , text
    , transformers

test-suite bson-codec-tests
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    Simple
    Sum
    Value

  build-depends:
    , bson
    , bson-codec
    , either
    , hspec
    , profunctors
    , transformers
    , text
